# LineCloser

./: Cargo.toml  LICENSE  LINE自動起動ウィンドウ非表示ツール仕様書.md  README.md  app.manifest  app.rc  build.rs  mise.toml  release.ps1  specification.md
.github/workflows/: release.yml
src/: installer.rs  main.rs
