[package]
name = "LineCloser"
version = "0.2.0"
edition = "2021"
authors = ["hrko"]

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
sysinfo = "0.30.12"
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
native-windows-gui = "1.0.12"
native-windows-derive = "1.0.3"
winreg = "0.52.0"
directories = "5.0.1"
sha2 = "0.10.8"

[build-dependencies]
embed-resource = "2.5.2"
